[tool.poetry]
name = "minechat-client"
version = "0.1.0"
description = ""
authors = ["Roman Bolkhovitin"]

[tool.poetry.scripts]
minechat = 'minechat_client.main:main'

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
rope = "^0.14.0"
pylint = "^2.3"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
